chgmgmt_build/src/objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>BE_Id__c</fullName>
        <externalId>true</externalId>
        <label>BE_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation__c</fullName>
        <label>評価</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>名前</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>point__c</fullName>
        <label>ポイント</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>キャンディデイト</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>キャンディデイトID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>キャンディデイト</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>